--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 </head>
 
 <body>
-
-  
-     
+  <header class="top">
+    <section class="top-content">
+      <h1>Fun Bus</h1>
+      <div class="navigation">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </div>
+    </section>
+  </header>
   <div class="container home">
-    
     <section class="welcome-section">
       <div class="img-content">
         <img src="img/fun-bus.jpg" alt="Welcome To Fun Bus!">
